--- a/Style.css
+++ b/Style.css
@@ -347,3 +347,29 @@ p {
       line-height: 1.3rem;
   }
 }
+
+@media (max-width:460px){
+
+  .hero .banner-text{
+    padding: 20px;
+}
+.beauty .beauty-text{
+  padding: 20px;
+  font-size:1.1rem ;
+}
+.beauty .beauty-img{
+  height: 250px;
+}
+.destination h2{
+  line-height: 1.3;
+  font-size: 1.8rem;
+}
+.destination p{
+  padding: 20px;
+  font-size:1.1rem ;
+}
+.second-banner img{
+  height: ;
+}
+
+}
